# MemSentry-

./: CMakeLists.txt  LICENSE  README.md  todo.md
docs/: API.md  Architecture.md  Heap.md  Hierarchy.md  ISentry.md  Pools.md  Reporter.md
examples/: CMakeLists.txt  README.md  audio.h  effect.h  example_allocation_reporting.cc  example_enable_disable.cc  example_hierarchical_graph.cc  example_memory_pools.cc  example_memory_report.cc  example_strategy_pattern.cc  main.cc
include/mem_pools/: buffer.h  chain.h  concepts.h  pool.h
include/mem_sentry/: alloc_header.h  constants.h  heap.h  mem_sentry.h  reporter.h  sentry.h
src/: console_reporter.cc  heap.cc  mem_sentry.cc
tests/: CMakeLists.txt  test_runner.cc
tests/mem_pools/: CMakeLists.txt  test_chain.cc
